mailpoet/assets/css/src/components-editor/components/_forms.scss
.admin_page_mailpoet-newsletter-editor {
  .mailpoet_form_field {
    margin: 19px 15px;
  }

  .mailpoet_form_field_title {
    clear: both;
    margin-bottom: 5px;
  }

  .mailpoet_form_field_title_small {
    width: 120px;
  }

  .mailpoet_form_field_title_inline {
    display: inline-block;
    margin-bottom: 0;
    margin-top: 6px;
  }

  .mailpoet_form_field_optional {
    color: $color-primary-inactive;
    font-size: .8em;
  }

  .mailpoet_form_field_radio_option,
  .mailpoet_form_field_checkbox_option {
    display: inline-block;
    line-height: 30px;
    margin-right: 5px;
    vertical-align: top;

    &:last-child {
      margin-right: 0;
    }
  }

  .mailpoet_form_field_input_option {
    display: inline-block;

    input[type=checkbox] {
      vertical-align: top;
    }

    input[type=text] {
      vertical-align: middle;
    }
  }

  .mailpoet_form_field_block {
    display: block;
  }

  .mailpoet_form_field_input_nowrap {
    white-space: nowrap;
  }
}

